# CHIP8

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: factorial.cpp  main.cpp
src/chipeight/: chipeight.cpp  chipeight.h
src/game/: game.cpp  game.h
src/renderer/: renderer.cpp  renderer.h
test/: CMakeLists.txt  tests.cpp
test/src/: tests.cpp
